Added VertX health check and metrics

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,3 +28,11 @@ RegexpLiteral:
 
 Style/Documentation:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - 'test/**/*.rb'
+    - 'sensu-plugins-java.gemspec'
